--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ h1{font-size:18px;margin:0; letter-spacing:.3px}
 /* Layout */
 .container{max-width:1920px; margin:18px auto; padding:0 18px; display:grid; grid-template-columns: 320px 1fr; gap:18px;}
 @media (max-width: 980px){ .container{grid-template-columns:1fr} }
-aside{position:sticky; top:76px; align-self:start; background:var(--panel); border:1px solid var(--stroke); border-radius:var(--radius); padding:14px; box-shadow:var(--shadow);}
+aside{position:sticky; top:76px; align-self:start; background:var(--panel); border:1px solid var(--stroke); border-radius:var(--radius); padding:14px; box-shadow:var(--shadow); max-height:calc(100vh - 92px); overflow:auto;}
 .section{margin-bottom:14px}
-.section h3{margin:0 0 8px; font-size:12px; font-weight:800; letter-spacing:.35px; color:var(--muted); text-transform:uppercase; text-align:center; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.section h3{margin:0 0 8px; font-size:12px; font-weight:800; letter-spacing:.35px; color:var(--muted); text-transform:uppercase; text-align:left; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .control{display:flex; flex-direction:column; gap:8px}
 input[type="text"], select{width:100%; padding:10px 12px; border-radius:10px; border:1px solid var(--stroke); background:var(--panel-2); color:var(--text);}
 .filters{display:flex; flex-direction:column; gap:6px; max-height:230px; overflow:auto; padding-right:4px}
@@ -82,8 +82,8 @@ input[type="text"], select{width:100%; padding:10px 12px; border-radius:10px; bo
 .badge b{font-weight:800}
 .result-bar{
   display:flex; align-items:center; gap:10px; justify-content:space-between;
-  padding:10px 12px; border-top:1px solid var(--stroke);
-  position:relative; min-height:40px;
+  padding:6px 8px; border-top:1px solid var(--stroke);
+  position:relative; min-height:30px;
 }
 .result-actions{ display:flex; align-items:center; gap:8px; }
 /* Itens do modal em lista (multiseleção) */
@@ -118,12 +118,12 @@ input[type="text"], select{width:100%; padding:10px 12px; border-radius:10px; bo
 .card-head{display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap; min-width:0;}
 .head-left{display:flex; align-items:center; gap:10px; min-width:0;}
 .head-right{display:flex; align-items:center; gap:10px; flex-wrap:wrap; min-width:0;}
-.block-body{ white-space:pre-wrap; padding:10px 12px; background:#0f141b; overflow:auto; overflow-wrap:anywhere; word-break:break-word; }
+.block-body{ white-space:pre-wrap; padding:8px 10px; background:#0f141b; overflow:auto; overflow-wrap:anywhere; word-break:break-word; }
 .count{color:var(--muted)}
 
 /* Cards */
-.cards{ padding:12px; display:grid; grid-template-columns:1fr; gap:12px}
-.card{border:1px solid var(--stroke); border-radius:12px; background:var(--panel-2); padding:12px; display:grid; gap:10px; transition:opacity .18s ease, border-color .18s ease; overflow:hidden;}
+.cards{ padding:8px; display:grid; grid-template-columns:1fr; gap:8px}
+.card{border:1px solid var(--stroke); border-radius:8px; background:var(--panel-2); padding:10px; display:grid; gap:8px; transition:opacity .18s ease, border-color .18s ease; overflow:hidden;}
 .card.done{opacity:.55; border-color:#2a3342;}
 .card-head{display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap}
 .head-left{display:flex; align-items:center; gap:10px}
@@ -184,14 +184,15 @@ input[type="text"], select{width:100%; padding:10px 12px; border-radius:10px; bo
 
 /* Blocos Pergunta/Resposta com título */
 .block{
-  border:1px solid var(--stroke); border-radius:12px; overflow:hidden; background:var(--panel-2);
+  border:1px solid var(--stroke); border-radius:8px; overflow:hidden; background:var(--panel-2);
 }
 .block-title{
-  padding:8px 12px; font-weight:900; letter-spacing:.3px;
+  padding:6px 10px; font-weight:900; letter-spacing:.3px;
   background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
   border-bottom:1px solid var(--stroke);
+  text-align:left;
 }
-.block-body{ white-space:pre-wrap; padding:10px 12px; background:#0f141b; }
+.block-body{ white-space:pre-wrap; padding:8px 10px; background:#0f141b; }
 
 /* Avaliação do Agente */
 .eval{border:1px dashed var(--stroke); border-radius:10px; background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.02)); padding:10px;}
@@ -342,16 +343,16 @@ header { position: relative; }
   .container{ margin-top: 12px !important; }
 
   /* Sidebar sobe, mantendo respiro */
-  aside{ top:18px !important; border-color:var(--stroke) !important; background:
+aside{ top:18px !important; border-color:var(--stroke) !important; background:
     linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.02)), var(--panel) !important;
-    border-radius:var(--radius) !important; }
+    border-radius:var(--radius) !important; max-height:calc(100vh - 36px) !important; overflow:auto !important; }
 
   /* ====== Cartões, painéis e acabamentos premium ====== */
-  .card, .panel, .box, .section{
+    .card, .panel, .box, .section{
     background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)) !important;
     border:1px solid var(--stroke) !important;
-    border-radius:18px !important;
-    box-shadow:0 24px 64px rgba(0,0,0,.45) !important;
+    border-radius:8px !important;
+    box-shadow:0 12px 32px rgba(0,0,0,.35) !important;
   }
   .card:hover{ transform:translateY(-1px); box-shadow:0 28px 70px rgba(0,0,0,.55); }
 
@@ -378,8 +379,8 @@ header { position: relative; }
   }
   .btn:hover{ transform:translateY(-1px); }
 /* Ajuste fino só para o botão de filtro de cliente */
-#btnFilterClient{
-  font-weight:600 !important;
+#btnFilterClient, #exportConferencia{
+  font-weight:500 !important;   /* sem negrito */
   text-align:left !important;
 }
   .btn.primary{
@@ -434,6 +435,24 @@ header { position: relative; }
     text-shadow:0 2px 12px rgba(34,211,238,.18);
   }
 </style>
+
+<!-- Casca principal igual ao Transmissor (sem alterar estrutura) -->
+<style id="ws-shell">
+  /* container externo: mesma “caixa” do Transmissor (.cb-dialog) */
+  .app-frame{
+    width:min(1920px,92vw);
+    margin:24px auto;
+    padding:24px 24px 28px;
+    background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,.02)), var(--panel);
+    border:4px solid var(--stroke);
+    border-radius: var(--radius);
+    box-shadow:0 24px 64px rgba(0,0,0,.45);
+  }
+  /* neutraliza o app-frame interno duplicado sem quebrar o layout */
+  .app-frame > .app-frame{
+    display: contents;
+  }
+</style>
 </head>
 <body>
 <header>
@@ -474,21 +493,22 @@ header { position: relative; }
 
     <div class="section">
   <h3>Busca</h3>
-  <input type="text" id="searchBox" placeholder="Pesquisar em tudo (código / pergunta / resposta)">
+  <input type="text" id="searchBox" placeholder="Pesquisar palavras">
 </div>
 
 <!-- NOVO: busca específica -->
 <div class="section">
   <h3>Busca específica</h3>
   <div class="control">
-    <input type="text" id="searchQ" placeholder="Filtrar apenas em Pergunta">
-    <input type="text" id="searchA" placeholder="Filtrar apenas em Resposta">
+    <input type="text" id="searchQ" placeholder="Filtrar em Perguntas">
+    <input type="text" id="searchA" placeholder="Filtrar em Respostas">
 
 <!-- Botão de filtro por cliente agora mora neste card -->
 <button id="btnFilterClient" class="btn hidden">Filtrar por cliente</button>
+<button id="btnClearClients" class="btn hidden" title="Remover todos os filtros de cliente">Limpar filtro</button>
 <!-- A lista de clientes agora é exibida em um modal (HTML inserido no final do <body>) -->
 
-    <span class="small">Dica: você pode usar os três campos juntos</span>
+    <span class="small"></span>
   </div>
 </div>
 
@@ -515,7 +535,7 @@ header { position: relative; }
     <div class="section">
   <h3>Relatórios</h3>
   <div class="control">
-    <button id="exportConferencia" class="btn">Relatório — Conferência</button>
+    <button id="exportConferencia" class="btn">Relatório de Conferência</button>
     <span class="small"></span>
   </div>
 </div>
@@ -529,7 +549,6 @@ header { position: relative; }
   <div class="count" id="resultCount">0 itens</div>
   <div class="result-actions">
     <button id="btnFilterClient"   class="btn hidden" title="Selecionar um ou mais clientes">Filtrar por cliente</button>
-    <button id="btnClearClients"   class="btn hidden" title="Remover todos os filtros de cliente">Limpar filtro</button>
     <button id="btnChart"          class="btn hidden">Exibir gráfico de assertividade</button>
   </div>
 </div>
@@ -1645,6 +1664,5 @@ function setDone(code, on){
   wire();
 })();
 </script>
-
 </body>
 </html>
